# ragna-aws

./: .gitignore  .pre-commit-config.yaml  README.md  environment-dev.yml  pyproject.toml
ragna_aws/: __init__.py  _s3.py  _utils.py
ragna_aws/_bedrock/: __init__.py  ai21_labs.py  amazon.py  anthropic.py  assistant.py  cohere.py  meta.py
